blueprint/nifi/nifi/nifi-registry.yml
---
# NiFi Deployment
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi-registry
  namespace: tkg-bigdata-ns
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      app: nifi-registry
  serviceName: nifi-registry
  template:
    metadata:
      labels:
        app: nifi-registry
    spec: 
      containers:
      - name: nifi-registry
        image: "kapkiai/nifi-registry:1.15.1"
        imagePullPolicy: IfNotPresent
        command: 
        - sh
        - -c
        - |
          cat /opt/nifi-registry/nifi-registry-current/conf/providers.tmp > /opt/nifi-registry/nifi-registry-current/conf/providers.xml
          /opt/nifi-registry/scripts/start.sh
        resources: 
          requests:
            cpu: "1"
            memory: "2Gi"
            ephemeral-storage: "2Gi"
          limits:
            cpu: "2"
            memory: "3Gi"
            ephemeral-storage: "3Gi"
        ports:
        - containerPort: 18443
          name: http-port
        - containerPort: 22
          name: ssh
        # - containerPort: 9088
        #   name: cluster
        volumeMounts:
          - mountPath: /opt/nifi-registry/nifi-registry-current/database
            name: database
          - mountPath: /opt/nifi-registry/nifi-registry-current/flow_storage
            name: flow-storage
          - mountPath: /opt/nifi-registry/nifi-registry-current/auth_conf
            name: auth
          - mountPath: /opt/nifi-registry/nifi-registry-current/logs
            name: logs
          - mountPath: /opt/nifi-registry/nifi-registry-current/conf/providers.tmp
            name: providers
            subPath: providers.tmp
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 2Gi
          name: logs    
        - name: "providers"
          configMap:
            name: nifiregproviders
            items:
              - key: "nifiregproviders.xml"
                path: "providers.tmp"


  volumeClaimTemplates:
  - metadata:
      name: database
    spec:
      storageClassName: nfs-bigdata
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 12Gi
  - metadata:
      name: flow-storage
    spec:
      storageClassName: nfs-bigdata
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 12Gi
 
  - metadata:
      name: auth
    spec:
      storageClassName: nfs-bigdata
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 5Gi
