blueprint/nifi/nifi/smsc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: smsc
  name: smsc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smsc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: smsc
    spec:
      containers:
      - image: kapkiai/smsc-test:1.1.0
        name: smsc-test
        command: ["java", "-jar", "client.jar", "196.30.132.248", "5016", "nifi", "NIFI", "nifi"]
        resources: {}
