blueprint/nifi/nifi/ca.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi-ca
  namespace: mattest
  labels:
    app: nifi-ca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi-ca
  serviceName: nifi
  template:
    metadata:
      namespace: mattest
      labels:
        app: nifi-ca
    spec:
      containers:
        - name: nifi-ca
          image: kapkiai/nifi-toolkit:1.15.1
          securityContext:
            runAsUser: 1000
            #fsGroup: 1000
          ports:
            - containerPort: 9443
              name: ca-client-port
          command:
            - bash
            - -c
            - |
              if [ -f config.json ]; then
              OPTIONS="--configJson config.json --useConfigJson"
              fi
              exec /opt/nifi/nifi-toolkit-current/bin/tls-toolkit.sh server -c nifi-ca-cs -t "1234578912345678912" ${OPTIONS}
          volumeMounts:
          - mountPath: /opt/nifi/nifi-toolkit-current/cert
            name: nifi-ca
          workingDir: /opt/nifi/nifi-toolkit-current/cert
  volumeClaimTemplates:
  - metadata:
      name: nifi-ca
    spec:
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 200Mi
        limits:
          storage: 300Mi
      storageClassName: nfs-bigdata
---
# Create service for the nifi-ca replica set
apiVersion: v1
kind: Service
metadata:
  name: nifi-ca-cs
  namespace: mattest
  labels:
    app: nifi-ca
spec:
  ports:
    - port: 9443
      name: ca-client-port
      targetPort: 9443
  selector:
    app: nifi-ca
