blueprint/nifi/nifi/nifi-registry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nifi-registry
  name: nifi-registry
  namespace: tkg-bigdata-ns
spec:
  ports:
  - name: http-port
    port: 18443
    protocol: TCP
    targetPort: 18443
  selector:
    app: nifi-registry
  type: ClusterIP
