blueprint/nifi/nifi/nifi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nifi
  name: nifi
  namespace: tkg-bigdata-ns
  annotations:
    projectcontour.io/upstream-protocol.tls: "8443"
spec:
  #externalTrafficPolicy: Cluster
  ports:
  - name: http-port
    #nodePort: 32617
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: cluster-port
    #nodePort: 30360
    port: 9088
    protocol: TCP
    targetPort: 9088
  selector:
    app: nifi
  # sessionAffinity: ClientIP
  # sessionAffinityConfig:
    # clientIP:
      # timeoutSeconds: 10800
  type: ClusterIP
