blueprint/nifi/nifi/go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS

  labels:
    name: go-server-ingress
  name: go-server-ingress
  namespace: tkg-bigdata-ns
spec:
  rules:
  - host: go-server.big-data.blueprint.lab
    http:
      paths:
      - backend:
          service:
            name: go-server
            port:
              number: 8443
        path: /go
        pathType: ImplementationSpecific
