blueprint/nifi/nifi/httpproxy-nifi.yaml
# httpproxy-example.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nifi
spec:
  virtualhost:
    fqdn: nifi.big-data.blueprint.lab
    tls:
      secretName: tls-secret
  routes:
  - services:
    - name: nifi
      port: 8443
    #loadBalancerPolicy:
     # strategy: Cookie
      # validation:
        # caSecret: my-certificate-authority
        # subjectName: backend.example.com
