blueprint/nifi/nifi/nifi-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/session-cookie-name: nifi-registry-cookie
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
  labels:
    name: nifi-registry-ngress
  name: nifi-registry-ingress
  namespace: tkg-bigdata-ns
spec:
  rules:
  - host: nifi-registry.big-data.blueprint.lab
    http:
      paths:
      - backend:
          service:
            name: nifi-registry
            port:
              number: 18443
        path: /
        pathType: ImplementationSpecific
